post view page margin fix on mobile

--- a/client/src/pages/PostViewPage/PostViewPage.module.scss
+++ b/client/src/pages/PostViewPage/PostViewPage.module.scss
@@ -17,5 +17,6 @@
 @media (max-width: 750px) {
   .PostViewPage {
     width: 100%;
+    margin-top:50px;
   }
 }
